Top and Side bar OK

--- a/frontendQCM/src/app/sidebar/sidebar.component.html
+++ b/frontendQCM/src/app/sidebar/sidebar.component.html
@@ -2,11 +2,14 @@
 
   <!-- Sidebar -->
   <ul id="sidebar">
-
+  <br>
     <!-- Logo Sidebar -->
     <a class="sidebar-logo">
-      <div class="sidebar-logo-text">QCMaker</div>
+      <div id="sidebar-logo-text">QCMaker</div>
     </a>
+    <br>
+    <div id="trait"></div>
+    <br>
 
     <!-- Divider -->
     <mat-divider></mat-divider>
@@ -14,28 +17,28 @@
     <!-- Nav Item - Accueil -->
     <li class="nav-item-accueil">
       <a class="" href="index.html">
-        <mat-icon>home</mat-icon>
+        <i class="fas fa-home"></i>
         <span>ACCUEIL</span></a>
     </li>
-
+    <br>
     <!-- Nav Item - Mes QCM -->
     <li class="nav-item-mesQCM">
       <a class="" href="index.html">
-        <mat-icon>home</mat-icon>
+        <i class="fas fa-tasks"></i>
         <span>MES QCM</span></a>
     </li>
-
+    <br>
     <!-- Nav Item - Mes Etudiants -->
     <li class="nav-item-mesEtudiants">
       <a class="" href="index.html">
-        <mat-icon>home</mat-icon>
+        <i class="fas fa-user-graduate"></i>
         <span>MES ETUDIANTS</span></a>
     </li>
-
+    <br>
     <!-- Nav Item - Mes Statistiques-->
     <li class="nav-item-mesStatistiques">
       <a class="" href="index.html">
-        <mat-icon>home</mat-icon>
+        <i class="fas fa-chart-line"></i>
         <span>MES STATISTIQUES</span></a>
     </li>
     <mat-divider></mat-divider>
