--- a/frontendQCM/src/app/sidebar/sidebar.component.scss
+++ b/frontendQCM/src/app/sidebar/sidebar.component.scss
@@ -3,6 +3,7 @@
 }
 #wrapper{
   width: 13%;
+  min-width:120px;
   height: 100%;
   background-color:var(--primary);
 }
@@ -11,7 +12,7 @@
   padding: 0;
 }
 #sidebar ul{
-  background-color:black ;
+  background-color:var(--primary) ;
 }
 #sidebar a{
   color:var(--white);
@@ -24,6 +25,7 @@
   background-color:var(--primary);
   max-width: 100%;
   padding-left: 1rem;
+  padding-top:1.5rem;
 }
 
 #sidebar-logo-text{
