--- a/frontendQCM/src/app/app.component.html
+++ b/frontendQCM/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-sidebar></app-sidebar>
 <app-topbar></app-topbar>
+<div class="centre">
+  <app-create></app-create>
+  <app-modify></app-modify>
+</div>
+
