change flexbox app component

--- a/frontendQCM/src/app/app.component.html
+++ b/frontendQCM/src/app/app.component.html
@@ -1,7 +1,9 @@
+<div class="wrapper">
 <app-sidebar></app-sidebar>
-<app-topbar></app-topbar>
-<div class="centre">
-  <app-create></app-create>
-  <app-modify></app-modify>
+<div class="right">
+  <app-topbar></app-topbar>
+  <app-accueil></app-accueil>
 </div>
+</div>
+
 
