--- a/frontendQCM/src/app/app.component.scss
+++ b/frontendQCM/src/app/app.component.scss
@@ -1,8 +1,27 @@
-body{
-  background-color: #B2B4B7;
+.wrapper{
+  display:flex;
+  flex-direction: row;
+  width:100%;
+}
+app-sidebar{
+  flex:1;
+  max-width: 15rem;
+  min-height: 100%;
+  background-color:var(--primary);
+}
+.right{
+  flex:2;
+  flex-grow: 1;
+  display:flex;
+  flex-direction: column;
+}
+app-accueil{
+  flex:2;
+  background-color: #7384E2;
+  flex-grow: 1;
+}
+app-topbar{
+  flex:1;
 }
 
-.centre{
-  position: relative;
-  display: flex;
-}
+
