--- a/frontendQCM/src/app/app.component.scss
+++ b/frontendQCM/src/app/app.component.scss
@@ -5,13 +5,13 @@
 }
 app-sidebar{
   flex:1;
-  max-width: 15rem;
+  max-width: 13rem;
   min-height: 100%;
   background-color:var(--primary);
 }
 .right{
   flex:2;
-  flex-grow: 1;
+  flex-grow:1;
   display:flex;
   flex-direction: column;
 }
@@ -21,7 +21,9 @@ app-accueil{
   flex-grow: 1;
 }
 app-topbar{
+  background-color: white;
   flex:1;
+  min-height: 3em;
 }
 
 
