--- a/frontendQCM/src/app/accueil/accueil.component.scss
+++ b/frontendQCM/src/app/accueil/accueil.component.scss
@@ -1,1 +1,12 @@
+app-create{
+  flex:1;
+  margin:2% 2% 0 8%;
+  cursor:pointer;
+}
 
+
+app-modify{
+  flex:2;
+  margin:2% 6% 0 2%;
+  cursor:pointer;
+}
