--- a/frontendQCM/src/app/create/create.component.scss
+++ b/frontendQCM/src/app/create/create.component.scss
@@ -1,1 +1,15 @@
+img{
+  background-color: white;
+  width:33rem;
+  height:auto;
+}
 
+.texte{
+  position: relative;
+  background-color: white;
+  text-align: center;
+  width:100%;
+  height:2rem;
+  padding:8px 0;
+  font-size: 20px;
+}
