change flexbox app component

--- a/frontendQCM/src/app/accueil/accueil.component.html
+++ b/frontendQCM/src/app/accueil/accueil.component.html
@@ -1,2 +1,4 @@
-<app-create></app-create>
-<app-modify></app-modify>
+<div class="wrapper">
+  <app-create></app-create>
+  <app-modify></app-modify>
+</div>
