--- a/frontendQCM/src/app/create/create.component.html
+++ b/frontendQCM/src/app/create/create.component.html
@@ -1,4 +1,6 @@
-<div class="create">
-  <div class="texte">CREER UN QCM</div>
-  <img src="/assets/img/3.svg"  alt="image" id="creer">
-</div>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>CREER UN QCM</mat-card-title>
+  </mat-card-header>
+  <img src="/assets/img/3.svg" alt="image">
+</mat-card>
