--- a/frontendQCM/src/app/modify/modify.component.scss
+++ b/frontendQCM/src/app/modify/modify.component.scss
@@ -1,15 +1,6 @@
 img{
   background-color: white;
-  width:33rem;
+  width:100%;
   height:auto;
 }
 
-.texte{
-  position: relative;
-  background-color: white;
-  text-align: center;
-  width:33rem;
-  height:2rem;
-  padding:8px 0;
-  font-size: 20px;
-}
