--- a/frontendQCM/src/app/accueil/accueil.component.scss
+++ b/frontendQCM/src/app/accueil/accueil.component.scss
@@ -1,12 +1,23 @@
+.wrapper{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+@media(max-width: 80rem){
+.wrapper{
+flex-direction: column;
+  align-items: center;
+}
+}
 app-create{
   flex:1;
-  margin:2% 2% 0 8%;
   cursor:pointer;
+  max-width:33rem;
 }
 
 
 app-modify{
   flex:2;
-  margin:2% 6% 0 2%;
   cursor:pointer;
+  max-width:33rem;
 }
