--- a/frontendQCM/src/app/topbar/topbar.component.html
+++ b/frontendQCM/src/app/topbar/topbar.component.html
@@ -1,4 +1,5 @@
-<div id="topbar">
+<mat-toolbar>
   <div id="search"><input type="text" placeholder="Chercher un QCM..."></div>
+  <span class="example-spacer"></span>
   <div id="user">TROGNON Thomas <i class="fas fa-user-circle" id="ico"></i> </div>
-</div>
+</mat-toolbar>
