--- a/frontendQCM/src/app/topbar/topbar.component.scss
+++ b/frontendQCM/src/app/topbar/topbar.component.scss
@@ -1,28 +1,17 @@
-#topbar{
+mat-toolbar{
   background-color: white;
-  display:flex;
-  justify-content: space-between;
 }
-
-#search{
-  position: relative;
-  margin-left:5%;
-  height: 40%;
-  line-height: 3em;
+.example-spacer {
+  flex: 1 1 auto;
 }
 
 input[type=text] {
   background-color: #EBECF0;
   border: 0px;
+  height: 20px;
 }
 
 #user{
-  margin-right: 1em;
-  line-height: 3em;
-  font-size: 100%;
   color: #3F51B5;
 }
 
-#ico{
-  margin-left: 5px;
-}
