Side and top bar version presque final

--- a/frontendQCM/src/app/app.component.html
+++ b/frontendQCM/src/app/app.component.html
@@ -1,9 +1,2 @@
-<div class="wrapper">
-<app-sidebar></app-sidebar>
-<div class="right">
-  <app-topbar></app-topbar>
-  <app-accueil></app-accueil>
-</div>
-</div>
-
+<app-layout></app-layout>
 
