--- a/frontendQCM/src/app/topbar/topbar.component.html
+++ b/frontendQCM/src/app/topbar/topbar.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar>
+  <button mat-icon-button (click)="clickMenu()">
+    <mat-icon>menu</mat-icon>
+  </button>
   <div id="search"><input type="text" placeholder="Chercher un QCM..."></div>
   <span class="example-spacer"></span>
   <div id="user">TROGNON Thomas <i class="fas fa-user-circle" id="ico"></i> </div>
