--- a/frontendQCM/src/app/sidebar/sidebar.component.html
+++ b/frontendQCM/src/app/sidebar/sidebar.component.html
@@ -1,41 +1,43 @@
-<div id="wrapper">
+<mat-sidenav-container>
+  <mat-sidenav #sidenav mode="side" opened>
+    <div id="wrapper">
+      <!-- Sidebar -->
+      <ul id="sidebar">
+        <br>
+        <!-- Logo Sidebar -->
+        <a class="sidebar-logo">
+          <div id="sidebar-logo-text">QCMaker</div>
+        </a>
+        <br>
+        <!-- Divider -->
+        <div id="trait"></div>
 
-  <!-- Sidebar -->
-  <ul id="sidebar">
-  <br>
-    <!-- Logo Sidebar -->
-    <a class="sidebar-logo">
-      <div id="sidebar-logo-text">QCMaker</div>
-    </a>
-    <br>
+        <!-- Nav Item - Accueil -->
+        <li class="nav-item-accueil">
+          <a class="" href="index.html">
+            <i class="fas fa-home"></i>
+            <span>ACCUEIL</span></a>
+        </li>
+        <!-- Nav Item - Mes QCM -->
+        <li class="nav-item-mesQCM">
+          <a class="" href="index.html">
+            <i class="fas fa-tasks"></i>
+            <span>MES QCM</span></a>
+        </li>
+        <!-- Nav Item - Mes Etudiants -->
+        <li class="nav-item-mesEtudiants">
+          <a class="" href="index.html">
+            <i class="fas fa-user-graduate"></i>
+            <span>MES ETUDIANTS</span></a>
+        </li>
+        <!-- Nav Item - Mes Statistiques-->
+        <li class="nav-item-mesStatistiques">
+          <a class="" href="index.html">
+            <i class="fas fa-chart-line"></i>
+            <span>MES STATISTIQUES</span></a>
+        </li>
 
-    <!-- Divider -->
-    <div id="trait"></div>
-
-    <!-- Nav Item - Accueil -->
-    <li class="nav-item-accueil">
-      <a class="" href="index.html">
-        <i class="fas fa-home"></i>
-        <span>ACCUEIL</span></a>
-    </li>
-    <!-- Nav Item - Mes QCM -->
-    <li class="nav-item-mesQCM">
-      <a class="" href="index.html">
-        <i class="fas fa-tasks"></i>
-        <span>MES QCM</span></a>
-    </li>
-    <!-- Nav Item - Mes Etudiants -->
-    <li class="nav-item-mesEtudiants">
-      <a class="" href="index.html">
-        <i class="fas fa-user-graduate"></i>
-        <span>MES ETUDIANTS</span></a>
-    </li>
-    <!-- Nav Item - Mes Statistiques-->
-    <li class="nav-item-mesStatistiques">
-      <a class="" href="index.html">
-        <i class="fas fa-chart-line"></i>
-        <span>MES STATISTIQUES</span></a>
-    </li>
-
-  </ul>
-</div>
+      </ul>
+    </div>
+  </mat-sidenav>
+</mat-sidenav-container>
