--- a/frontendQCM/src/app/sidebar/sidebar.component.scss
+++ b/frontendQCM/src/app/sidebar/sidebar.component.scss
@@ -1,9 +1,14 @@
-*{
-  margin : 0;
+mat-sidenav {
+  background: #3F51B5;
+  color: white;
+  width: 100%;
+  height: 100%;
 }
-#wrapper{
 
+mat-sidenav-container {
+  height: 100vh;
 }
+
 #sidebar{
   list-style-type:none;
   padding: 0;
