--- a/frontendQCM/src/app/topbar/topbar.component.html
+++ b/frontendQCM/src/app/topbar/topbar.component.html
@@ -1,8 +1,9 @@
-<mat-toolbar>
+<mat-toolbar xmlns="http://www.w3.org/1999/html">
   <button mat-icon-button (click)="clickMenu()">
     <mat-icon>menu</mat-icon>
   </button>
   <div id="search"><input type="text" placeholder="Chercher un QCM..."></div>
+<!--  <button [swal]="{title: 'MON QCM', input: 'text'}"> Création </button>-->
   <span class="example-spacer"></span>
   <div id="user">TROGNON Thomas <i class="fas fa-user-circle" id="ico"></i> </div>
 </mat-toolbar>
