rajout des popup dialogue sur l'accueil+routing de l'application fonctionnel

--- a/frontendQCM/src/app/Pages/layout/layout.component.html
+++ b/frontendQCM/src/app/Pages/layout/layout.component.html
@@ -2,6 +2,6 @@
     <app-sidebar *ngIf="isOpen"></app-sidebar>
   <div class="right">
     <app-topbar (open)="navOpen($event)"></app-topbar>
-    <app-accueil></app-accueil>
+    <router-outlet></router-outlet>
   </div>
 </div>
