--- a/frontendQCM/src/app/Component/sidebar/sidebar.component.html
+++ b/frontendQCM/src/app/Component/sidebar/sidebar.component.html
@@ -14,25 +14,25 @@
 
         <!-- Nav Item - Accueil -->
         <li class="nav-item-accueil">
-          <a class="" href="index.html">
+          <a class="" routerLink="/accueil">
             <i class="fas fa-home"></i>
             <span>ACCUEIL</span></a>
         </li>
         <!-- Nav Item - Mes QCM -->
         <li class="nav-item-mesQCM">
-          <a class="" href="index.html">
+          <a class="" routerLink="/mesqcm">
             <i class="fas fa-tasks"></i>
             <span>MES QCM</span></a>
         </li>
         <!-- Nav Item - Mes Etudiants -->
         <li class="nav-item-mesEtudiants">
-          <a class="" href="index.html">
+          <a class="" routerLink="/etudiants">
             <i class="fas fa-user-graduate"></i>
             <span>MES ETUDIANTS</span></a>
         </li>
         <!-- Nav Item - Mes Statistiques-->
         <li class="nav-item-mesStatistiques">
-          <a class="" href="index.html">
+          <a class="" routerLink="/statistiques">
             <i class="fas fa-chart-line"></i>
             <span>MES STATISTIQUES</span></a>
         </li>
