--- a/frontendQCM/src/app/Pages/accueil/accueil.component.scss
+++ b/frontendQCM/src/app/Pages/accueil/accueil.component.scss
@@ -1,22 +1,26 @@
 .wrapper{
   display:flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
 }
 @media(max-width: 70rem){
   .wrapper{
   flex-direction: column;
     align-items: center;
   }
+  .modifier{
+    margin-top: 2em;
+  }
 }
-app-create{
+.creer{
   flex:1;
   cursor:pointer;
   max-width:33rem;
 }
 
 
-app-modify{
+.modifier{
   flex:2;
   cursor:pointer;
   max-width:33rem;
