ajout du titre et du tabs de la fenetre de création

--- a/frontendQCM/src/app/Pages/creation-qcm/creation-qcm.component.html
+++ b/frontendQCM/src/app/Pages/creation-qcm/creation-qcm.component.html
@@ -1,2 +1,4 @@
-<p>creation-qcm works!</p>
-
+<div class="wrapper">
+  <app-creation-title [title]="name" class="title"></app-creation-title>
+  <app-creation-tab></app-creation-tab>
+</div>
