moved creation-tab call in creation-qcm component

--- a/src/app/Pages/creation-qcm/creation-qcm.component.html
+++ b/src/app/Pages/creation-qcm/creation-qcm.component.html
@@ -1,5 +1,7 @@
 <div class="wrapper">
   <app-creation-title [title]="name" class="title"></app-creation-title>
   <app-creation-tab></app-creation-tab>
-
+  <div *ngIf="checkSelectorQuestions()">
+    <app-creation-questions></app-creation-questions>
+  </div>
 </div>
