--- a/src/app/Component/Creation/creation-questions/creation-questions.component.scss
+++ b/src/app/Component/Creation/creation-questions/creation-questions.component.scss
@@ -25,3 +25,34 @@ img{
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none;
   }
+
+  .mat-button-toggle {
+    border-radius: 50px;
+    margin-left: 8px;
+    margin-right: 8px;
+    width: 200px;
+    height: 64px;
+    background-color: white;
+    color: black;
+    font-size: 32px;
+    padding: 0 !important;
+  }
+  
+  .mat-button-toggle-checked {
+    background-color: #3F51B5;
+    color: #ffffff;
+    font-size: 32px;
+  }
+  
+  .mat-button-toggle-group {
+    border: none;
+    height: 64px;
+    border-radius: 4px;
+    padding: 0px !important;
+  }
+
+  #btnCategorie{
+    background-color: #3F51B5;
+    color: white;
+  }
+
