V0 du tableau de parametre

--- a/src/app/Component/Creation/creation-tab/creation-tab.component.html
+++ b/src/app/Component/Creation/creation-tab/creation-tab.component.html
@@ -11,3 +11,6 @@
 <div *ngIf="selector==='QUESTIONS'">
   <app-creation-questions></app-creation-questions>
 </div>
+<div *ngIf="selector==='PARAMETRES'">
+  <app-creation-parametres></app-creation-parametres>
+</div>
