--- a/src/app/Component/Creation/creation-tab/creation-tab.component.html
+++ b/src/app/Component/Creation/creation-tab/creation-tab.component.html
@@ -14,3 +14,6 @@
 <div *ngIf="selector==='PARAMETRES'">
   <app-creation-parametres></app-creation-parametres>
 </div>
+<div *ngIf="selector==='EDITION'">
+  <app-creation-editions></app-creation-editions>
+</div>
