--- a/src/app/Component/Creation/creation-questions/creation-questions.component.scss
+++ b/src/app/Component/Creation/creation-questions/creation-questions.component.scss
@@ -51,8 +51,17 @@ img{
     padding: 0px !important;
   }
 
-  #btnCategorie{
+  .bouton{
     background-color: #3F51B5;
     color: white;
   }
 
+.parent{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.parent > div{
+  flex-grow: 1;
+  background: silver;
+}
