--- a/src/app/Component/Layout/sidebar/sidebar.component.html
+++ b/src/app/Component/Layout/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
         <br>
         <!-- Logo Sidebar -->
         <a class="sidebar-logo">
-          <div id="sidebar-logo-text"><p>QCMaker</p></div>
+          <div id="sidebar-logo-text"><img src="assets/img/logoDeptaFull.png" alt="logo" draggable="false"></div>
         </a>
         <br>
         <!-- Divider -->
