--- a/src/app/Component/tableau-etudiants/tableau-etudiants.component.html
+++ b/src/app/Component/tableau-etudiants/tableau-etudiants.component.html
@@ -16,12 +16,12 @@
     <!-- Class Column -->
     <ng-container matColumnDef="class">
       <th mat-header-cell *matHeaderCellDef> Classe </th>
-      <td mat-cell class="class" *matCellDef="let etudiant" > {{etudiant.class}} </td>
+      <td mat-cell class="class" *matCellDef="let etudiant" > {{etudiant.classe}} </td>
     </ng-container>
 
     <!-- Group Column -->
     <ng-container matColumnDef="group">
-      <th mat-header-cell *matHeaderCellDef> Groupes </th>
+      <th mat-header-cell *matHeaderCellDef> Groupe </th>
       <td mat-cell class="group" *matCellDef="let etudiant" > {{etudiant.group}} </td>
     </ng-container>
 
