--- a/src/app/Component/Layout/sidebar/sidebar.component.scss
+++ b/src/app/Component/Layout/sidebar/sidebar.component.scss
@@ -3,6 +3,11 @@ mat-sidenav {
   color: white;
   width: 100%;
   height: 100%;
+  margin: 0;
+}
+
+img{
+  width: 90%;
 }
 
 mat-sidenav-container {
