--- a/src/app/Component/Creation/creation-question/creation-question.component.scss
+++ b/src/app/Component/Creation/creation-question/creation-question.component.scss
@@ -1,61 +1,11 @@
-//mat-card{
-//  height: 25rem;
-//  padding-right: 5%;
-//  padding-left: 5%;
-//
-//  .mat-card-title{
-//    width: 100%;
-//    text-align: center;
-//    margin-top: 2%;
-//    margin-bottom: 2%;
-//  }
-//
-//  .mat-form-field{
-//    width: 60%;
-//    height: 20%;
-//  }
-//
-//  .notation{
-//    width: 100%;
-//    display: flex;
-//
-//    .gauche{
-//      flex: 1 50%;
-//      display: flex;
-//    }
-//
-//    .droite{
-//      flex: 2 ;
-//    }
-//    .mat-card {
-//      color: white;
-//      background-color: #3F51B5;
-//      height: 28%;
-//      border-radius: 0%;
-//      text-align: center;
-//
-//    }
-//    .mat-form-field{
-//      width: 70%;
-//      text-align: right;
-//    }
-//  }
-//}
-//
-//#question{
-//  margin-top:10px;
-//  width: 100%;
-//}
-
-
 mat-card {
   padding: 5%;
-  height: 25rem;
+  height: 30rem;
   display: grid;
   grid-template-columns: 60% 30%;
-  grid-template-rows: repeat(5, 15%);
+  grid-template-rows: repeat(6, 15%);
   grid-column-gap: 10%;
-  grid-row-gap: 5%;
+  grid-row-gap: 2%;
 
   mat-form-field{
     width: 100%;
@@ -68,6 +18,21 @@ mat-card {
 .div4 { grid-area: 4 / 1 / 5 / 2; display: flex}
 .div5 { grid-area: 5 / 1 / 6 / 2;}
 .div6 { grid-area: 4 / 2 / 5 / 3;text-align: center;}
+.div7 { grid-area: 6 / 1 / 7 / 2;
+  mat-card{
+    text-align: center;
+    border-radius: 0px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
+    background-color: #3F51B5;
+    line-height: 2rem;
+    height: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
 
 #good{
   color: white;
