v0 du panel MesEtudiants

--- a/src/app/Component/Creation/creation-question/creation-question.component.html
+++ b/src/app/Component/Creation/creation-question/creation-question.component.html
@@ -1,38 +1,3 @@
-<!--<mat-card>-->
-<!--  <mat-card-title>-->
-<!--    {{questionName}}-->
-<!--  </mat-card-title>-->
-<!--  <mat-form-field appearance="fill" id="question">-->
-<!--    <mat-label>Question?</mat-label>-->
-<!--    <input matInput [(ngModel)]="questionName" placeholder="ma question?">-->
-<!--  </mat-form-field>-->
-<!--  <mat-form-field appearance="fill" id="type">-->
-<!--    <mat-label>Type</mat-label>-->
-<!--    <mat-select>-->
-<!--      <mat-option *ngFor="let choi of choix" [value]="choi.value">-->
-<!--        {{choi.viewValue}}-->
-<!--      </mat-option>-->
-<!--    </mat-select>-->
-<!--  </mat-form-field>-->
-<!--  <div class="notation">-->
-<!--    <div class="gauche">-->
-<!--      <mat-card>Notation</mat-card>-->
-<!--      <mat-form-field appearance="fill" id="notation">-->
-<!--        <input matInput type="number" placeholder="1">-->
-<!--      </mat-form-field>-->
-<!--    </div>-->
-<!--    <div class="droite">-->
-<!--      <mat-card>Bonne réponse</mat-card>-->
-<!--    </div>-->
-
-<!--  </div>-->
-<!--  <mat-form-field appearance="fill" id="r1">-->
-<!--    <mat-label>Réponse 1</mat-label>-->
-<!--    <input matInput>-->
-<!--  </mat-form-field>-->
-<!--</mat-card>-->
-
-
 <mat-card>
   <div class="div1">
     <mat-card-title>
@@ -62,7 +27,7 @@
           </mat-form-field>
   </div>
   <div class="div5">
-    <mat-form-field appearance="fill" id="r1">
+    <mat-form-field appearance="fill">
         <mat-label>Réponse 1</mat-label>
         <input matInput>
       </mat-form-field>
@@ -71,8 +36,9 @@
     <mat-card class="mat-card mat-focus-indicator" id="good">Bonne réponse</mat-card>
   </div>
   <div class="div7">
-    <mat-card class="mat-card mat-focus-indicator">
-      <img src="assets/img/add-circle-white.svg">
-    </mat-card>
+    <mat-form-field *ngFor="let reponse of question.reponses" class="categorie" appearance="fill">
+      <mat-label>Réponse {{reponse.id}}</mat-label>
+      <input matInput></mat-form-field>
+      <app-creation-add class="categorie" (click)="addAnswer()"></app-creation-add>
   </div>
 </mat-card>
