--- a/src/app/Component/Creation/creation-question/creation-question.component.scss
+++ b/src/app/Component/Creation/creation-question/creation-question.component.scss
@@ -1,7 +1,21 @@
+mat-card {
+  padding: 5%;
+  height: auto;
+  display: grid;
+  grid-template-columns: 60% 30%;
+  grid-template-rows: repeat(4, 8vh);
+  grid-column-gap: 10%;
+
+  mat-form-field{
+    width: 100%;
+    //margin-bottom: 35px;
+  }
+}
+
 .div1 { grid-area: 1 / 1 / 2 / 3; text-align: center;}
 .div2 { grid-area: 2 / 1 / 2 / 3;}
 .div3 { grid-area: 3 / 1 / 4 / 2;}
-.div4 { grid-area: 4 / 1 / 5 / 2;}
+.div4 { grid-area: 4 / 1 / 5 / 2; display: flex}
 .div5 { grid-area: 5 / 1 / 6 / 2;}
 .div6 { grid-area: 5 / 2;}
 .div7 { grid-area: 6 / 1 / 7 / 2;
