--- a/src/app/Component/Creation/creation-question/creation-question-defaut/creation-question-defaut.component.scss
+++ b/src/app/Component/Creation/creation-question/creation-question-defaut/creation-question-defaut.component.scss
@@ -1,22 +1,22 @@
-mat-card {
-  padding: 5%;
+.body {
+  width: 100%;
   height: auto;
   display: grid;
   grid-template-columns: 60% 30%;
+  grid-template-rows: repeat(4, 8vh);
   grid-column-gap: 10%;
   mat-form-field{
     width: 100%;
   }
 }
 
-.div1 { grid-area: 1 / 1 / 1 / 3 ; text-align: center; margin-bottom: 3vh}
+.div1 { grid-area: 1 / 1;}
 .div2 { grid-area: 2 / 1;}
-.div3 { grid-area: 3 / 1; }
-.div4 { grid-area: 4 / 1 / 4 /3; margin-top: 3vh}
+.div3 { grid-area: 2 / 2;}
+.div4 { grid-area: 3 / 1;}
 
 #good{
   color: white;
-  -webkit-touch-callout: none;
   -webkit-user-select: none;
   user-select: none;
   background-color: #3F51B5;
