V1 de tout les panels de création de question

--- a/src/app/Component/Creation/creation-question/creation-question-numerique/creation-question-numerique.component.scss
+++ b/src/app/Component/Creation/creation-question/creation-question-numerique/creation-question-numerique.component.scss
@@ -3,7 +3,7 @@
   height: auto;
   display: grid;
   grid-template-columns: 60% 30%;
-  grid-template-rows: repeat(4, 8vh);
+  grid-template-rows: 8vh;
   grid-column-gap: 10%;
   mat-form-field{
     width: 100%;
