--- a/src/app/Pages/layout/layout.component.scss
+++ b/src/app/Pages/layout/layout.component.scss
@@ -16,7 +16,7 @@ app-sidebar{
   flex-direction: column;
 }
 router-outlet{
-  margin-top: 5em;
+  margin-top: 10%;
 }
 app-topbar{
   background-color: white;
