--- a/src/app/Pages/accueil/accueil.component.scss
+++ b/src/app/Pages/accueil/accueil.component.scss
@@ -1,8 +1,7 @@
 .wrapper{
+  width: 100%;
   display:flex;
-  flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
 }
 @media(max-width: 70rem){
   .wrapper{
@@ -18,7 +17,6 @@
   cursor:pointer;
   max-width:33rem;
 }
-
 
 .modifier{
   flex:2;
