V2 de tout les panels de création de question

--- a/src/app/Component/Creation/creation-question/creation-question-numerique/creation-question-numerique.component.html
+++ b/src/app/Component/Creation/creation-question/creation-question-numerique/creation-question-numerique.component.html
@@ -1,14 +1,14 @@
 <div class="body">
   <div class="div1">
     <mat-form-field appearance="fill" id="notation">
-      <mat-label>Notation</mat-label>
+      <mat-label>Réponse</mat-label>
       <input matInput type="number">
     </mat-form-field>
   </div>
   <div class="div2">
     <mat-form-field appearance="fill">
-      <mat-label>Réponse</mat-label>
-      <input matInput>
+      <mat-label>Notation</mat-label>
+      <input matInput type="number">
     </mat-form-field>
   </div>
 </div>
