--- a/src/app/Component/Creation/creation-question/creation-question-ouverte/creation-question-ouverte.component.scss
+++ b/src/app/Component/Creation/creation-question/creation-question-ouverte/creation-question-ouverte.component.scss
@@ -3,17 +3,16 @@
   height: auto;
   display: grid;
   grid-template-columns: 30% 30% 30%;
-  grid-template-rows: repeat(2, 8vh);
-  grid-column-gap: 3%;
+  grid-template-rows: 8vh;
+  grid-column-gap: 5%;
   mat-form-field{
     width: 100%;
   }
 }
 
-.div1 { grid-area: 1 / 1 / 1 / 4;}
-.div2 { grid-area: 2 / 1;}
-.div3 { grid-area: 2 / 2;}
-.div4 { grid-area: 2 / 3;}
+.div2 { grid-area: 1 / 1;}
+.div3 { grid-area: 1 / 2;}
+.div4 { grid-area: 1 / 3;}
 
 #note{
   color: white;
