--- a/src/app/Component/Creation/creation-question/creation-question.component.html
+++ b/src/app/Component/Creation/creation-question/creation-question.component.html
@@ -20,6 +20,10 @@
           </mat-select>
         </mat-form-field>
   </div>
+  <div class="not">
+    <mat-card-title>Notation</mat-card-title>
+    <mat-divider></mat-divider>
+  </div>
 <!--  <div class="div4">-->
 <!--          <mat-form-field appearance="fill" id="notation">-->
 <!--            <mat-label>Notation</mat-label>-->
@@ -42,6 +46,7 @@
 <!--      <app-creation-add class="categorie" (click)="addAnswer()"></app-creation-add>-->
 <!--  </div>-->
   <div class="div4">
+    <app-creation-question-defaut *ngIf="selected==''"></app-creation-question-defaut>
     <app-creation-question-defaut *ngIf="selected=='defaut-0'"></app-creation-question-defaut>
     <app-creation-question-numerique *ngIf="selected=='numerique-1'"></app-creation-question-numerique>
     <app-creation-question-ouverte *ngIf="selected=='ouverte-2'"></app-creation-question-ouverte>
