--- a/src/app/Component/Creation/creation-question/creation-question.component.scss
+++ b/src/app/Component/Creation/creation-question/creation-question.component.scss
@@ -9,10 +9,11 @@ mat-card {
   }
 }
 
-.div1 { grid-area: 1 / 1 / 1 / 3 ; text-align: center; margin-bottom: 3vh}
+.div1 {grid-area: 1 / 1/ 1/ 3; text-align: center; margin-bottom: 3vh}
 .div2 { grid-area: 2 / 1;}
 .div3 { grid-area: 3 / 1; }
-.div4 { grid-area: 4 / 1 / 4 /3; margin-top: 3vh}
+.not { grid-area: 4 / 1/ 4/ 3; margin-top: 3vh; text-align: center}
+.div4 { grid-area: 5 / 1 / 5 / 3; margin-top: 3vh}
 
 #good{
   color: white;
