--- a/src/app/Pages/accueil/accueil.component.html
+++ b/src/app/Pages/accueil/accueil.component.html
@@ -1,4 +1,11 @@
 <div class="wrapper">
-  <app-create [image]="'assets/img/3.svg'" [titre]="'CREER UN QCM'" [type]="'creer'" class="creer"></app-create>
-  <app-create [image]="'assets/img/2.svg'" [titre]="'MODIFIER UN QCM'" [type]="'modifier'" class="modifier"></app-create>
+  <div class="recent">
+    <span>
+      RECENTS:
+    </span>
+  </div>
+  <div class="qcm">
+    <app-create [image]="'assets/img/3.svg'" [titre]="'CREER UN QCM'" [type]="'creer'" class="creer"></app-create>
+    <app-create [image]="'assets/img/2.svg'" [titre]="'MODIFIER UN QCM'" [type]="'modifier'" class="modifier"></app-create>
+  </div>
 </div>
