--- a/src/app/Pages/accueil/accueil.component.scss
+++ b/src/app/Pages/accueil/accueil.component.scss
@@ -1,25 +1,57 @@
+//.wrapper{
+//  margin-top: 5%;
+//  width: 100%;
+//  display:flex;
+//  justify-content: space-evenly;
+//}
+//@media(max-width: 70rem){
+//  .wrapper{
+//  flex-direction: column;
+//    align-items: center;
+//  }
+//  .modifier{
+//    margin-top: 2em;
+//  }
+//}
+//.creer{
+//  flex:1;
+//  cursor:pointer;
+//  max-width:33rem;
+//}
+//
+//.modifier{
+//  flex:2;
+//  cursor:pointer;
+//  max-width:33rem;
+//}
+
 .wrapper{
   width: 100%;
-  display:flex;
-  justify-content: space-evenly;
-}
-@media(max-width: 70rem){
-  .wrapper{
-  flex-direction: column;
-    align-items: center;
-  }
-  .modifier{
-    margin-top: 2em;
-  }
-}
-.creer{
-  flex:1;
-  cursor:pointer;
-  max-width:33rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
+.recent{
+  width: 50%;
+  background-color: red;
+}
+
+.creer{
+  max-width: 100%;
+  margin-bottom: 4%;
+}
 .modifier{
-  flex:2;
-  cursor:pointer;
-  max-width:33rem;
+  max-width: 100%;
+}
+.qcm{
+  width: 18%;
+  display: flex;
+  flex-direction: column;
+}
+
+span{
+  color: #3F51B5;
+  font-weight: bold;
+  font-size: 2em;
 }
