--- a/src/app/Component/Accueil/input-dialog/input-dialog.component.html
+++ b/src/app/Component/Accueil/input-dialog/input-dialog.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
-  <input mat-input [formControl]="nom" placeholder="{{data.placeholder}}" [(ngModel)]="data.name" type="text" class="input" (keydown.enter)="onClick(data.name)">
-  <button mat-flat-button color="primary" [disabled]="nom.invalid" [mat-dialog-close]="data.name">{{data.button}}</button>
+  <input mat-input #name [formControl]="nom" placeholder="{{data.placeholder}}" [(ngModel)]="data.name" type="text" class="input" (keyup)="onChange(name.value)" (keydown.enter)="onClick(data.name)">
+  <p *ngIf="invalide">{{error}}</p>
+  <button mat-flat-button color="primary" [disabled]="nom.invalid || invalide" [mat-dialog-close]="data.name">{{data.button}}</button>
 </div>
