--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,4 +20,7 @@ html, body {
 }
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #EBECF0}
+.curseur{
+  cursor: pointer;
+}
 
