--- a/src/app/Pages/accueil/accueil.component.html
+++ b/src/app/Pages/accueil/accueil.component.html
@@ -5,7 +5,7 @@
     </span>
   </div>
   <div class="qcm">
-    <app-create [image]="'assets/img/3.svg'" [titre]="'CREER UN QCM'" [type]="'creer'" class="creer"></app-create>
-    <app-create [image]="'assets/img/2.svg'" [titre]="'MODIFIER UN QCM'" [type]="'modifier'" class="modifier"></app-create>
+    <app-create [image]="'assets/img/3.svg'" [titre]="'CREER UN QCM'" [type]="'creer'" class="creer curseur"></app-create>
+    <app-create [image]="'assets/img/2.svg'" [titre]="'MODIFIER UN QCM'" [type]="'modifier'" class="modifier curseur"></app-create>
   </div>
 </div>
